# Distributed_Order_Platform

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  project_history.md  pyproject.toml
app/: Dockerfile  config.py  database.py  main.py  requirements.txt
app/middleware/: metrics.py
app/models/: __init__.py  menu_item.py  order.py  payment.py
app/routers/: orders.py
app/schemas/: menu_item.py  order.py
app/services/: order_service.py  payment_service.py
app/utils/: logging.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: platform.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
notification_service/: Dockerfile  config.py  consumer.py  main.py  metrics.py
notification_service/utils/: logging.py
payment_service/: Dockerfile  config.py  consumer.py  database.py  main.py  metrics.py  models.py  payment_processor.py
payment_service/utils/: logging.py
shared/: events.py  tracing.py
